[package]
name = "dstrombe-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = { git = "https://github.com/c-1-4/fuse-rs.git" }
libc = "0.2.138"
reqwest = {version = "0.11.13", features = ["blocking"]}
rust-crypto = "0.2.36"
serde = {version = "1.0.149", features = ["derive"]}
serde_json = "1.0.89"
